[project]
name = "pgjobq"
version = "0.10.0"
description = ""
authors = [
    {name = "Adrian Garcia Badaracco", email = "adrian@adriangb.com"},
]
dependencies = [
    "anyio>=3.7.1",
    "typing-extensions>=4.8.0",
    "asyncpg>=0.29.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
black = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "trio>=0.23.1",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "ruff>=0.1.6",
    "pydantic>=2.5.1",
    "black>=23.11.0",
]
